--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,40 @@
+# Core Dependencies
+loguru>=0.7.2
+modelscope>=1.26.0
+huggingface-hub>=0.32.4
+numpy>=1.21.6
+tqdm>=4.67.1
+requests
+httpx
+pillow>=11.0.0
+
+# PDF Handling
+pdfminer.six>=20251230
+pypdfium2>=4.30.0
+pypdf>=5.6.0
+reportlab
+pdftext>=0.6.3
+
+# Image Processing & CV
+opencv-python>=4.11.0.86
+scikit-image>=0.25.0
+matplotlib>=3.10
+torch>=2.6.0
+torchvision
+transformers>=4.49.0
+onnxruntime>1.17.0
+ultralytics>=8.3.48
+doclayout_yolo==0.0.4
+
+# NLP & Layout
+fast-langdetect>=0.2.3
+beautifulsoup4>=4.13.5
+mineru-vl-utils>=0.1.19.1
+qwen-vl-utils>=0.0.14
+shapely>=2.0.7
+pyclipper>=1.3.0
+ftfy>=6.3.1
+omegaconf>=2.3.0
+
+# Docling
 docling
